Adjusted incorrect image source title

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/302test.png" alt="" />
+							<img src="images/302Test.png" alt="" />
 						</div>
 					</section>
 
