updated github links

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								who wanted to increase the level of automation in their documentation. This program uses a simple GUI and minimises user input as requested by the client. This is an ongoing project
 								that is developed in python using various simple python libraries.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Github Link</a></li>
+								<li><a href="https://github.com/AidanDrockmanGit/ITP-Form-Generator" class="button">Github Link</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -72,7 +72,7 @@
 								to reduce user error as requested.
 							</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Github Link</a></li>
+								<li><a href="https://github.com/AidanDrockmanGit/Lot-Register-Form-Automation" class="button">Github Link</a></li>
 							</ul>
 						</div>
 						<div class="image">
